--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -83,3 +83,13 @@ form a {
     text-decoration:none;
     color:#4a76a8;
 }
+
+.flash {
+    margin-bottom: 5px;
+    text-align: center;
+    color: white;
+    background-color: red;
+    padding: 10px;
+    border-radius: 5px;
+
+}
