--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -478,3 +478,17 @@ header .head-side {
         grid-template-columns: repeat(1, 1fr);
     }
 }
+.feed-pagination a {
+    display: inline-block;
+    padding: 10px;
+    border: 1px solid #ccc;
+    margin: 5px;
+    text-decoration: none;
+    color: #000;
+}
+.feed-pagination a.active {
+    background-color: #fff;
+}
+.feed-pagination a:hover {
+    background-color: #fff;
+}
